# rules_kt_test

./: .gitignore  WORKSPACE
common/: BUILD.bazel
common/src/main/kotlin/kr/co/vcnc/map/: SouthKoreaArea.kt
kotlin/: BUILD.bazel
